change target jar to jdk11